--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+
+.home-page {
+  padding: 2%;
+display: flex;
+flex-direction: column;  
+align-items: center;
+ background-color: #edf0f5;
+  min-height: 100vh;
+  font-family: Arial, sans-serif;
+}
+
+.home-page-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 20px;
+ 
+
+  width: 100%;
+}
+
+.home-page-container > div {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+width: 260px;
+height: 200px;
   text-align: center;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.home-page-container p {
+padding: 20PX;
+  font-size: 1.2rem;
+  color: #000000;
+  font-weight: bold;
 }
